test/conformance/chainsaw/rbac/mutate-policy-with-clusterrole/clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
  name: kyverno:mutate-deployments
rules:
- apiGroups:
  - apps
  resources:
  - deployments
  resourceNames:
  - "monitor-grafana"
  verbs:
  - get
  - list
  - patch
  - update
  - watch
