test/conformance/chainsaw/rbac/mutate-policy-with-clusterrole/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: policy-reload-on-secret-update
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
