test/conformance/chainsaw/rbac/mutate-policy-with-clusterrole/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-policy-with-clusterrole
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: clusterrole.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: policy-reload-on-secret-update
